--- a/Projekt/MainWindow.xaml
+++ b/Projekt/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Projekt"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="800">
+        Title="MainWindow" Height="400" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -23,12 +23,22 @@
         <StackPanel Grid.Column="1" Margin="10">
             <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,10">Image</TextBlock>
             <Image Name="picture" Height="300" Source="images/brain.jpg"/>
-            <StackPanel Margin="0,10,0,0">
-                <Button Content="fault normal" Click="FaultNormalButton_Click" />
-                <Button Content="fault wave" Click="FaultWaveButton_Click" />
-                <Button Content="correct normal" Click="PerfectNormalButton_Click" />
-                <Button Content="correct wave" Click="PerfectWaveButton_Click" />
-            </StackPanel>
+            <Grid>
+                <!-- Buttons layout in the right panel -->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                
+                <Button Content="fault normal" Click="FaultNormalButton_Click" Grid.Row="0" Grid.Column="0" />
+                <Button Content="fault wave" Click="FaultWaveButton_Click" Grid.Row="1" Grid.Column="0" />
+                <Button Content="correct normal" Click="PerfectNormalButton_Click" Grid.Row="0" Grid.Column="1" />
+                <Button Content="correct wave" Click="PerfectWaveButton_Click" Grid.Row="1" Grid.Column="1" />
+            </Grid>
         </StackPanel>
     </Grid>
 </Window>
