--- a/Projekt/MainWindow.xaml
+++ b/Projekt/MainWindow.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Projekt"
         mc:Ignorable="d"
-        Title="MainWindow" Height="400" Width="800">
+        Title="MainWindow" Height="450" Width="1200">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -39,6 +40,12 @@
                 <Button Content="correct normal" Click="PerfectNormalButton_Click" Grid.Row="0" Grid.Column="1" />
                 <Button Content="correct wave" Click="PerfectWaveButton_Click" Grid.Row="1" Grid.Column="1" />
             </Grid>
+        </StackPanel>
+        
+        <!-- Trzecia kolumna dla notatek i komunikatów -->
+        <StackPanel Grid.Column="2" Margin="10">
+            <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,10">Notatki</TextBlock>
+            <TextBox x:Name="notesTextBox" Height="300" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" />
         </StackPanel>
     </Grid>
 </Window>
