--- a/Projekt/MainWindow.xaml
+++ b/Projekt/MainWindow.xaml
@@ -44,7 +44,7 @@
         
         <!-- Trzecia kolumna dla notatek i komunikatów -->
         <StackPanel Grid.Column="2" Margin="10">
-            <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,10">Notatki</TextBlock>
+            <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,10">Technical notes</TextBlock>
             <TextBox x:Name="notesTextBox" Height="300" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" />
         </StackPanel>
     </Grid>
