--- a/Projekt/MainWindow.xaml
+++ b/Projekt/MainWindow.xaml
@@ -5,25 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Projekt"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="1200">
+        Title="MainWindow" Height="500" Width="1200">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
         <!-- Panel po lewej stronie -->
         <StackPanel Grid.Column="0" Margin="10">
             <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,10">File list</TextBlock>
-            <ListBox Name="fileList" Height="300" />
+            <ListBox Name="fileList" Height="360" />
             <Button Name="loadButton" Content="Load Files" Click="LoadButton_Click" Margin="0,10,0,0" />
         </StackPanel>
 
         <!-- Panel po prawej stronie -->
         <StackPanel Grid.Column="1" Margin="10">
             <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,10">Image</TextBlock>
-            <Image x:Name="picture" Height="300"/>
+            <Image x:Name="picture" Height="360"/>
             <Grid>
                 <!-- Buttons layout in the right panel -->
                 <Grid.RowDefinitions>
@@ -35,9 +35,9 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 
-                <Button Content="fault normal" Click="FaultNormalButton_Click" Grid.Row="0" Grid.Column="0" />
+                <Button Content="fault normal" Click="FaultNormalButton_Click" Grid.Row="0" Grid.Column="0" Margin="0,10,0,0"/>
                 <Button Content="fault wave" Click="FaultWaveButton_Click" Grid.Row="1" Grid.Column="0" />
-                <Button Content="correct normal" Click="PerfectNormalButton_Click" Grid.Row="0" Grid.Column="1" />
+                <Button Content="correct normal" Click="PerfectNormalButton_Click" Grid.Row="0" Grid.Column="1" Margin="0,10,0,0"/>
                 <Button Content="correct wave" Click="PerfectWaveButton_Click" Grid.Row="1" Grid.Column="1" />
             </Grid>
         </StackPanel>
@@ -45,7 +45,7 @@
         <!-- Trzecia kolumna dla notatek i komunikatów -->
         <StackPanel Grid.Column="2" Margin="10">
             <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,10">Technical notes</TextBlock>
-            <TextBox x:Name="notesTextBox" Height="300" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" />
+            <TextBox x:Name="notesTextBox" Height="360" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" />
         </StackPanel>
     </Grid>
 </Window>
