--- a/Projekt/MainWindow.xaml
+++ b/Projekt/MainWindow.xaml
@@ -5,25 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Projekt"
         mc:Ignorable="d"
-        Title="meanUClassifier" Height="700" Width="1700"
+        Title="meanUClassifier" Height="720" Width="1700"
         Icon="images/brain.jpg">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.5*" />
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="380" />
+            <ColumnDefinition Width="920" />
+            <ColumnDefinition Width="380" />
         </Grid.ColumnDefinitions>
 
         <!-- Panel po lewej stronie -->
         <StackPanel Grid.Column="0" Margin="10">
-            <TextBlock FontSize="24" FontWeight="Bold" Margin="0,0,0,20">File list</TextBlock>
+            <TextBlock FontSize="20" Height="40" FontWeight="Bold" Margin="0,0,0,20">File list</TextBlock>
             <ListBox Name="fileList" Height="480"/>
-            <Button Name="loadButton" FontSize="24" FontWeight="Bold" Content="Load Files" Click="LoadButton_Click" Margin="0,20,0,0" />
+            <Button Name="loadButton" FontSize="20" Height="40" FontWeight="Bold" Content="Load Files" Click="LoadButton_Click" Margin="0,20,0,0" />
         </StackPanel>
 
         <!-- Panel po prawej stronie -->
         <StackPanel Grid.Column="1" Margin="10">
-            <TextBlock FontSize="24" FontWeight="Bold" Margin="0,0,0,20" Name="examine" TextAlignment="Center"></TextBlock>
+            <TextBlock FontSize="20"  Height="40" FontWeight="Bold" Margin="0,0,0,20" Name="examine" TextAlignment="Center"></TextBlock>
             <Image x:Name="picture" Height="480" Width="900"/>
             <Grid>
                 <!-- Buttons layout in the right panel -->
@@ -35,18 +35,18 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button Content="fault normal" FontSize="24" FontWeight="Bold" Click="FaultNormalButton_Click" Grid.Row="0" Grid.Column="0" Margin="10,20,10,10"/>
-                <Button Content="fault wave" FontSize="24" FontWeight="Bold" Click="FaultWaveButton_Click" Grid.Row="1" Grid.Column="0" Margin="10,5,10,10"/>
-                <Button Content="correct normal" FontSize="24" FontWeight="Bold" Click="PerfectNormalButton_Click" Grid.Row="0" Grid.Column="1" Margin="10,20,10,10"/>
-                <Button Content="correct wave" FontSize="24" FontWeight="Bold" Click="PerfectWaveButton_Click" Grid.Row="1" Grid.Column="1" Margin="10,5,10,10"/>
+                <Button Content="fault normal" FontSize="20" Height="40" FontWeight="Bold" Click="FaultNormalButton_Click" Grid.Row="0" Grid.Column="0" Margin="10,20,10,10"/>
+                <Button Content="fault wave" FontSize="20" Height="40" FontWeight="Bold" Click="FaultWaveButton_Click" Grid.Row="1" Grid.Column="0" Margin="10,5,10,10"/>
+                <Button Content="correct normal" FontSize="20" Height="40" FontWeight="Bold" Click="PerfectNormalButton_Click" Grid.Row="0" Grid.Column="1" Margin="10,20,10,10"/>
+                <Button Content="correct wave" FontSize="20" Height="40" FontWeight="Bold" Click="PerfectWaveButton_Click" Grid.Row="1" Grid.Column="1" Margin="10,5,10,10"/>
             </Grid>
         </StackPanel>
         
         <!-- Trzecia kolumna dla notatek i komunikatów -->
         <StackPanel Grid.Column="2" Margin="10">
-            <TextBlock FontSize="24" FontWeight="Bold" Margin="0,0,0,20">Technical notes</TextBlock>
+            <TextBlock FontSize="20"  Height="40" FontWeight="Bold" Margin="0,0,0,20">Technical notes</TextBlock>
             <TextBox x:Name="notesTextBox" Height="480" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" />
-            <Button Name="copyNotesButton" FontSize="24" FontWeight="Bold" Content="Copy notes to clipboard" Click="Copy_notes" Margin="0,20,0,0" />
+            <Button Name="copyNotesButton" Height="40" FontSize="20" FontWeight="Bold" Content="Copy notes to clipboard" Click="Copy_notes" Margin="0,20,0,0" />
         </StackPanel>
     </Grid>
 </Window>
